--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   font: 16px / 1 sans-serif;
+  font-family: sans-serif;
 }
 
 html {
@@ -9,4 +10,83 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-color: #fcfefd;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: sans-serif;
+  font-size: large;
+}
+
+header {
+  text-align: center;
+  padding: 1.5rem;
+}
+
+h1 {
+  color: #f18cc9;
+  font-size: 5rem;
+  font-family: 'Lobster', cursive;
+  margin: 1rem 0rem;
+  letter-spacing: 0.4rem;
+}
+
+h3 {
+  color: #e5bad7;
+  font-size: 2rem;
+  font-family: 'Lobster', cursive;
+  margin: 0;
+}
+
+span {
+  color: #aef5d4;
+  font-family: 'Lobster', cursive;
+  font-size: larger;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  margin-top: 0px;
+}
+
+section {
+  border: solid #f18cc9 1px;
+  border-radius: 5px;
+  text-align: center;
+  padding: 2rem;
+  width: 30%;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem;
+}
+
+img {
+  max-height: 150px;
+}
+  
+.border ul:hover{
+  box-shadow: 0 0 0 5px #aef5d4;
+  border-radius: 30px;
+  transition: .5s ease;
+  cursor: pointer; 
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 2rem;
+  padding-top: 1rem;
+}
+
+.grid article:first-child {
+  grid-column: span 2;
 }
