Added some more styling so current player is more obvious

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,7 @@ section {
   border-radius: 5px;
   text-align: center;
   padding: 2rem;
+  opacity: 25%;
   width: 30%;
 }
 
@@ -89,6 +90,10 @@ footer {
 
 img {
   max-height: 150px;
+}
+
+.active-player, .winner {
+  opacity: 100%;
 }
   
 .active-player .border ul:hover{
