--- a/src/style.css
+++ b/src/style.css
@@ -43,11 +43,14 @@ h3 {
 }
 
 button {
-  width: 5rem;
-  height: 2rem;
+  width: 10rem;
+  height: 3rem;
   background-color: #f18cc9;
+  color: white;
   border-radius: 30px;
   border-style: none;
+  font-size: 1.5rem;
+  padding: .5rem;
 }
 
 button:hover {
@@ -94,6 +97,10 @@ img {
 .active-player, .winner {
   opacity: 100%;
 }
+
+.winner {
+  border: solid 10px #aef5d4;
+}
   
 .active-player .border ul:hover{
   box-shadow: 0 0 0 5px #aef5d4;
@@ -122,8 +129,12 @@ img {
 
 @media only screen and (max-width: 725px) {
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     letter-spacing: 0rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
   }
 
   main {
